syntax = "proto3";

package lockets.api.v1;

option go_package = "gen/api/v1";

message LocketRelation {
  // The name of locket.
  // Format: "lockets/{uid}"
  string locket = 1;

  // The name of related locket.
  // Format: "lockets/{uid}"
  string related_locket = 2;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    REFERENCE = 1;
    COMMENT = 2;
  }
  Type type = 3;
}
